src/components/home/Footer.scss
.footerPadding {
  padding-right: 108px;
  padding-left: 108px;
}

.footerContent{
  padding-bottom: 40px;
}

.footer {
  background-color: #060527;
  padding-top: 20px;
  background-image: url("../assets/grid.png");
  background-position: center;
  background-repeat: no-repeat;
  background-size: 160% 80%;
}

.footer_logo{
  height:38px;
  margin-bottom: 12px;
}

.link {
  color: white;
  text-decoration: none;
  font-size: 1.13em;
  font-weight: 600;
}

.footerBottomMargin {
  margin-bottom: 20px;
}

.LinkList {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.intro {
  color: #938fbe;
  font-size: 1em;
  margin-bottom: 28px;
}

.FooterRight {
  text-align: right;
  display: flex;
  align-items: flex-end;
  flex-direction: column;
}

.Logos {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  align-items: center;
}

.LogoImg {
  margin-right: 10px;
}

.SocialLogo {
  margin-left: 20px;
}

.copyright {
  background: linear-gradient(118.92deg, #0e0c33 100%, #1b0e40 100%);
  padding-top: 12px;
  padding-bottom: 6px;
  text-transform: uppercase;
}

.copyrightText {
  opacity: 0.5;
  font-size: 0.8em;
}

.heart {
  height: 13px !important;
  animation: pound 0.35s infinite alternate !important;
  -webkit-animation: pound 0.35s infinite alternate !important;
}

.organize_text{
  text-transform: uppercase;
  padding-bottom: 14px;
}

.follow_text{
  text-transform: uppercase;
  padding-bottom: 14px;
  padding-top: 40px;
}

@-webkit-keyframes pound {
  to {
    transform: scale(1.1);
  }
}

@keyframes pound {
  to {
    transform: scale(1.1);
  }
}

@media only screen and (max-width: 900px) {
  .link {
    margin-bottom: 30px;
  }

  .CenterAlign {
    text-align: center;
    margin-top: 5px;
    margin-bottom: 5px;
  }
  .leftAlign {
    text-align: left;
  }

  .SocialLogo {
    margin-top: 10px;
    margin-left: 8px;
  }

  .footerPadding {
    padding-right: 20px;
    padding-left: 20px;
  }

  .mobileSize3 {
    width: 270px;
    height: auto;
  }

  .copyright {
    margin-top: 5px;
  }

  .intro {
    margin-top: 0px;
  }

  .mobileMargin {
    margin-bottom: 50px;
  }

  .footer {
    background-size: 250% 85%;
    background-position-y: 50px;
  }
  
  .follow_text{
    padding-top: 0px;
  }

  .footer_logo{
    height: auto;
    width: 80%;
  }

  //active bellow commented codes if need to change the font size on desktop view(maxWidth>60)
  /*.link {
        font-size: 1.13em;
    }

    .intro {
        font-size: 1em;
    }

    .copyrightText {
        font-size: 0.8em;
    }*/
}

@media only screen and (max-width: 600px) {
  .mobileSize1 {
    width: 35px;
    height: auto;
  }

  .mobileSize2 {
    width: 70px;
    height: auto;
  }
}

